Memory corruption destroying PaymentCoordinator https://bugs.webkit.org/show_bug.cgi?id=159516 rdar://problem/27222857

Reviewed by Tim Horton.

Introduce a new MessageReceiverMap::removeMessageReceiver that takes a MessageReceiver
and removes all traces of it in the message receiver map. Use it in the WebPaymentCoordinator destructor.

* Platform/IPC/MessageReceiverMap.cpp:
(IPC::MessageReceiverMap::removeMessageReceiver):
* Platform/IPC/MessageReceiverMap.h:
* Shared/ChildProcess.cpp:
(WebKit::ChildProcess::removeMessageReceiver):
* Shared/ChildProcess.h:
* WebProcess/ApplePay/WebPaymentCoordinator.cpp:
(WebKit::WebPaymentCoordinator::~WebPaymentCoordinator):

Canonical link: https://commits.webkit.org/177648@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202922 268f45cc-cd09-0410-ab3c-d52691b4dbfc