Source/WebKit2/Platform/IPC/MessageReceiverMap.h
@@ -47,6 +47,7 @@ public:
 
     void removeMessageReceiver(StringReference messageReceiverName);
     void removeMessageReceiver(StringReference messageReceiverName, uint64_t destinationID);
+    void removeMessageReceiver(MessageReceiver&);
 
     void invalidate();
 
